--- a/vignettes/paso4.html
+++ b/vignettes/paso4.html
@@ -14,7 +14,7 @@
 <meta name="author" content="Ariel Salgado" />
 
 
-<title>Paso 2: checkeo por departamentos</title>
+<title>Paso 4: ubicaciones genéricas</title>
 
 
 
@@ -215,7 +215,7 @@ code > span.fu { color: #900; font-weight: bold; }  code > span.er { color: #a61
 
 
 
-<h1 class="title toc-ignore">Paso 2: checkeo por departamentos</h1>
+<h1 class="title toc-ignore">Paso 4: ubicaciones genéricas</h1>
 <h4 class="author">Ariel Salgado</h4>
 <h4 class="date">15/5/2020</h4>
 
@@ -223,21 +223,26 @@ code > span.fu { color: #900; font-weight: bold; }  code > span.er { color: #a61
 
 <div id="preambulo" class="section level2">
 <h2><em>PREAMBULO</em></h2>
-<p>En este segundo paso, realizaremos un checkeo sobre la georreferenciación realizada en el paso anterior. La idea es aprovecharse de esta información para contrastar si el resultado es razonable. Los archivos con información sobre departamentos se espera que esten en formato shape (.shp), de forma de que sean leidos mediante el paquete <em>sf</em>. Con este tutorial se proveen archivos provistos por el INDEC que contienen los archivos shape de los departamentos y provincias.</p>
+<p>En este cuarto paso, lo que haremos es georreferenciar las llamadas <em>ubicaciones genericas</em>. Estas ubicaciones son las que los buscadores devuelven por default cuando buscamos una región grande, como una localidad o una provincia. El objetivo es comprobar que las ubicaciones que obtuvimos en el primer paso no sea <em>genericas</em>. Para esto, la función realiza dos pasos: primero construye las ubicaciones genéricas, las busca y las guarda en un archivo, y luego realiza el checkeo. Esto es útil porque en siguientes búsquedas se puede recurrir nuevamente a esta base con ubicaciones genéricas, de forma de ahorrar tiempo de búsquedas.</p>
 </div>
-<div id="paso-2-checkeo-por-departamentos" class="section level2">
-<h2><em>PASO 2: CHECKEO POR DEPARTAMENTOS</em></h2>
-<p>En este caso, el código es muy sencillo. Únicamente debemos cargar el paquete, el directorio en el cual se encuentra nuestro archivo base, y el directorio en el que se encuentran el archivo shape con los departamentos. Además, debemos indicar en qué columna se encuentra el ID asociado al departamento de cada caso a georreferenciar. Esta columna debe contener EXACTAMENTE los códigos presentes en una columna <code>link</code> en el archivo shape. La función realiza un matcheo EXACTO entre los argumento en la columna <code>depto_id_column</code> del archivo input y <code>link</code> del archivo shape.</p>
-<pre><code>require(geoche)
-inputArchivo = 'bases/ejemplo/ejemplo.csv'
-departamentos_path = 'shp/departamentos/censo_por_departamento_polígonos.shp'
-depto_id_column='ID_DEPTO_INDEC_RESIDENCIA'
-output = checkea_departamentos_ggmap_y_osm(inputArchivo,departamentos_path,depto_id_column)</code></pre>
-<p>En esta función existen varios parámetros que pueden modificarse, siendo los más relevantes:</p>
-<ul>
-<li><code>crs</code>: el sistema coordenado usado para buscar intersecciones. Por default 22185</li>
-<li><code>id_column</code>: Columna con los ids en el archivo OSM y archivo original. Por default, <em>IDEVENTOCASO</em>.</li>
-</ul>
+<div id="paso-4" class="section level2">
+<h2><em>PASO 4: </em></h2>
+<p>Cada buscador tiene su propio archivo de ubicaciones genéricas, por lo que contaremos con un archivo para <em>ggmap</em> (GOOGLE) y uno para <em>OSM</em>, ademas del archivo base. En caso de que estos archivos no existan, la funcion los creará. Sugerimos construir una carpeta para esto en <code>trabajo/ubicaciones_genericas</code>, de forma de poder recurrir a él independientemente de la búsqueda que realicemos.</p>
+<pre><code>require(geoche) 
+inputArchivo = 'bases/charla/charla.csv'
+ubicaciones_genericas_ggmap_path = 'ubicaciones_genericas/ubicaciones_genericas_ggmap.csv'
+ubicaciones_genericas_osm_path = 'ubicaciones_genericas/ubicaciones_genericas_osm.csv'</code></pre>
+<p>Al igual que en el paso 1, debemos especificar como construir las ubicaciones (qué campos usar):</p>
+<pre><code>campos_genericos1 = c(&quot;PROVINCIA_RESIDENCIA&quot;,&quot;LOCALIDAD_RESIDENCIA&quot;)
+campos_genericos2 = c(&quot;PROVINCIA_RESIDENCIA&quot;,&quot;DEPARTAMENTO_RESIDENCIA&quot;,&quot;LOCALIDAD_RESIDENCIA&quot;)</code></pre>
+<p>Podemos especificar nuevamente un texto prefijo, un tiempo limite para OSM y la clave api de google, además de la columna con los IDs.</p>
+<pre><code>prefijo = 'ARGENTINA'
+timeout = 5
+apikey = readLines(&quot;apikey.txt&quot;)
+id_column = 'IDEVENTOCASO'</code></pre>
+<p>Y ya solo resta hacer:</p>
+<pre><code>output = check_ubicacion_generica_ggmap_y_osm(inputArchivo,ubicaciones_genericas_ggmap_path,ubicaciones_genericas_osm_path,campos_genericos1,campos_genericos2,prefijo,id_column,apikey,timeout=timeout)</code></pre>
+<p>Esta función se ocupa de constuir las bases de ubicaciones genéricas, y de checkear en base a ellas si las ubicaciones encontradas en el paso 1 son genéricas o no.</p>
 </div>
 
 
