--- a/vignettes/paso5.html
+++ b/vignettes/paso5.html
@@ -14,7 +14,7 @@
 <meta name="author" content="Ariel Salgado" />
 
 
-<title>Paso 2: checkeo por departamentos</title>
+<title>Paso 5: distancia a clinicas</title>
 
 
 
@@ -215,7 +215,7 @@ code > span.fu { color: #900; font-weight: bold; }  code > span.er { color: #a61
 
 
 
-<h1 class="title toc-ignore">Paso 2: checkeo por departamentos</h1>
+<h1 class="title toc-ignore">Paso 5: distancia a clinicas</h1>
 <h4 class="author">Ariel Salgado</h4>
 <h4 class="date">15/5/2020</h4>
 
@@ -223,21 +223,21 @@ code > span.fu { color: #900; font-weight: bold; }  code > span.er { color: #a61
 
 <div id="preambulo" class="section level2">
 <h2><em>PREAMBULO</em></h2>
-<p>En este segundo paso, realizaremos un checkeo sobre la georreferenciación realizada en el paso anterior. La idea es aprovecharse de esta información para contrastar si el resultado es razonable. Los archivos con información sobre departamentos se espera que esten en formato shape (.shp), de forma de que sean leidos mediante el paquete <em>sf</em>. Con este tutorial se proveen archivos provistos por el INDEC que contienen los archivos shape de los departamentos y provincias.</p>
+<p>En este quinto paso, lo que haremos es comprobar la distancia a un hospital de referencia, si este existiera. La lógica atras de esto es que si la ubicación está muy distante del punto de referencia, tiene más sentido asociarlo al punto de referencia que a otro. Nuevamente, necesitaremos un shp con las ubicaciones de estos puntos de referencia.</p>
 </div>
-<div id="paso-2-checkeo-por-departamentos" class="section level2">
-<h2><em>PASO 2: CHECKEO POR DEPARTAMENTOS</em></h2>
-<p>En este caso, el código es muy sencillo. Únicamente debemos cargar el paquete, el directorio en el cual se encuentra nuestro archivo base, y el directorio en el que se encuentran el archivo shape con los departamentos. Además, debemos indicar en qué columna se encuentra el ID asociado al departamento de cada caso a georreferenciar. Esta columna debe contener EXACTAMENTE los códigos presentes en una columna <code>link</code> en el archivo shape. La función realiza un matcheo EXACTO entre los argumento en la columna <code>depto_id_column</code> del archivo input y <code>link</code> del archivo shape.</p>
+<div id="paso-5" class="section level2">
+<h2><em>PASO 5: </em></h2>
+<p>En este paso necesitamos especificar un archivo con las ubicaciones de referencia:</p>
 <pre><code>require(geoche)
 inputArchivo = 'bases/ejemplo/ejemplo.csv'
-departamentos_path = 'shp/departamentos/censo_por_departamento_polígonos.shp'
-depto_id_column='ID_DEPTO_INDEC_RESIDENCIA'
-output = checkea_departamentos_ggmap_y_osm(inputArchivo,departamentos_path,depto_id_column)</code></pre>
-<p>En esta función existen varios parámetros que pueden modificarse, siendo los más relevantes:</p>
-<ul>
-<li><code>crs</code>: el sistema coordenado usado para buscar intersecciones. Por default 22185</li>
-<li><code>id_column</code>: Columna con los ids en el archivo OSM y archivo original. Por default, <em>IDEVENTOCASO</em>.</li>
-</ul>
+hospitales_path = 'shp/hospitales/hospitales.shp'</code></pre>
+<p>Además, debemos indicar en qué columna del archivo input se encuentra la información de los puntos de referencia:</p>
+<pre><code>hospi_name_column='ESTABLECIMIENTO_CARGA'</code></pre>
+<p>Esta información será comparada con la columna <em>Nombre</em> del archivo shape. En caso de no encontrar un match exacto, se realiza una comparación aproximada (util cuando son nombres de clinicas, pero en otro caso podrían ser códigos númericos, que se resolverían exitosamente con el match genérico).</p>
+<p>Debemos especificar una distancia máxima a la cual se debería encontrar la ubicación georreferenciada del punto de referencia:</p>
+<pre><code>max_distancia = 200*1000 # 200km</code></pre>
+<p>Y ya solo resta corre la funcion:</p>
+<pre><code>output = checkea_clinica_ggmap_y_osm(inputArchivo,hospitales_path,hospi_name_column,max_distancia = max_distancia)</code></pre>
 </div>
 
 
